git/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: git
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 22
      targetPort: 22
